# text_classifier

./: README.md  classifier.ipynb  pyproject.toml
