[tool.poetry]
name = "text_classifier"
version = "0.1.0"
description = ""
authors = ["fadiHB <eng.fadi.hb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.0"
pandas = "^1.1.5"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
